Instead of using plain CSS, use Less.js instead.
While this is not as good as being able to have the full power of Sass/Compass
on the client-side, it is a good substitute and should allow for less noise
in the stylesheets.

In order to expose Less.js as an AMD module, fake AMD support in the module
definition function.

--- a/client/application/assets/styles/default.less
+++ b/client/application/assets/styles/default.less
@@ -1,3 +1,12 @@
 body, p, label, input, button, select, textarea, .navbar-search {
   font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+#login {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
