Start working on a modal Login screen, not implemented yet.

--- a/client/application/templates/login/index.hbs
+++ b/client/application/templates/login/index.hbs
@@ -1,2 +1,13 @@
-{{translate "login.header"}}
-{{translate "login.body"}}
+<article id=login>
+  <div class=modal>
+    <div class=modal-header>
+      <h3>{{translate "login.header"}}</h3>
+    </div>
+    <div class="modal-body">
+      <p>{{translate "login.instructions"}}</p>
+    </div>
+    <div class="modal-footer">
+      <button id=continue class="btn btn-primary">{{translate "login.continue"}}</button>
+    </div>
+  </div>
+</article>
