Pretty up the log in page of the app using Bootstrap modal dialogue.
The log in page is not implemented yet.

--- a/client/application/assets/styles/default.less
+++ b/client/application/assets/styles/default.less
@@ -8,5 +8,16 @@ body, p, label, input, button, select, textarea, .navbar-search {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.75);
+
+  h1 {
+    min-height: 80px;
+    text-indent: -1000px;
+    background: url('application/assets/images/logo-prototype.svg') no-repeat 0 0;
+    background-size: auto 100%;
+  }
+
+  .control-group { margin-bottom: 2px; }
+
+  .pull-left { float: left; }
 }
