Add a placeholder 'Sign Up' page (controller, view, template).

--- a/client/application/templates/login/index.hbs
+++ b/client/application/templates/login/index.hbs
@@ -26,7 +26,14 @@
         </div>
       </div>
       <footer class=modal-footer>
-        <button id=continue type=submit class="btn btn-primary">{{translate "login.continue"}}&nbsp;&nbsp;<span class="icon-chevron-right icon-white"></span></button>
+        <div class=row-fluid>
+          <div class=span6>
+            <button id=signup type=button class="btn pull-left"><span class=icon-user></span>&nbsp;&nbsp;{{translate "login.signup"}}</button>
+          </div>
+          <div class=span6>
+            <button id=continue type=submit class="btn btn-primary">{{translate "login.continue"}}&nbsp;&nbsp;<span class="icon-chevron-right icon-white"></span></button>
+          </div>
+        </div>
       </footer>
     </div>
   </form>
