Translate input boxes labels on Log in page, #nfc.

--- a/client/application/templates/login/index.hbs
+++ b/client/application/templates/login/index.hbs
@@ -7,7 +7,7 @@
       <div class=modal-body>
         <p>{{translate "login.instructions"}}</p>
         <div class=control-group>
-          <label class=control-label for=email>E-mail:</label>
+          <label class=control-label for=email>{{translate "login.box.email"}}:</label>
           <div class=controls>
             <div class=input-prepend>
               <span class=add-on><span class=icon-user></span></span>
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class=control-group>
-          <label class=control-label for=password>Password:</label>
+          <label class=control-label for=password>{{translate "login.box.password"}}:</label>
           <div class=controls>
             <div class=input-prepend>
               <span class=add-on><span class=icon-lock></span></span>
