Add a placeholder 'Sign Up' page, not implemented yet.

--- a/client/application/assets/styles/default.less
+++ b/client/application/assets/styles/default.less
@@ -2,7 +2,7 @@ body, p, label, input, button, select, textarea, .navbar-search {
   font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-#login {
+#login, #signup {
   position: absolute;
   top: 0;
   left: 0;
