--- a/client/application/templates/login/index.hbs
+++ b/client/application/templates/login/index.hbs
@@ -1,5 +1,5 @@
 <article id=login>
-  <form id=details class=form-horizontal>
+  <form class="form-horizontal details">
     <div class=modal>
       <header class=modal-header>
         <h1>{{translate "login.header"}}</h1>
@@ -12,10 +12,10 @@
       <footer class=modal-footer>
         <div class=row-fluid>
           <div class=span6>
-            <button id=signup type=button class="btn pull-left"><span class=icon-user></span>&nbsp;&nbsp;{{translate "login.signup"}}</button>
+            <button type=button class="btn pull-left signup"><span class=icon-user></span>&nbsp;&nbsp;{{translate "login.signup"}}</button>
           </div>
           <div class=span6>
-            <button id=continue type=submit class="btn btn-primary">{{translate "login.continue"}}&nbsp;&nbsp;<span class="icon-chevron-right icon-white"></span></button>
+            <button type=submit class="btn btn-primary continue">{{translate "login.continue"}}&nbsp;&nbsp;<span class="icon-chevron-right icon-white"></span></button>
           </div>
         </div>
       </footer>
