--- a/client/application/templates/signup/index.hbs
+++ b/client/application/templates/signup/index.hbs
@@ -1,1 +1,22 @@
-XXX: Not implemented.
+<article id=signup>
+  <form class="form-horizontal details">
+    <div class=modal>
+      <header class=modal-header>
+        <h1>{{translate "signup.header"}}</h1>
+      </header>
+      <div class=modal-body>
+        <p>{{translate "signup.instructions"}}</p>
+      </div>
+      <footer class=modal-footer>
+        <div class=row-fluid>
+          <div class=span6>
+            <button type=button class="btn pull-left cancel"><span class=icon-chevron-left></span>&nbsp;&nbsp;{{translate "signup.cancel"}}</button>
+          </div>
+          <div class=span6>
+            <button type=submit class="btn btn-primary signup">{{translate "signup.continue"}}&nbsp;&nbsp;<span class="icon-chevron-right icon-white"></span></button>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </form>
+</article>
