Add 'Sign Up' form to the view.

--- a/client/application/templates/signup/index.hbs
+++ b/client/application/templates/signup/index.hbs
@@ -6,6 +6,9 @@
       </header>
       <div class=modal-body>
         <p>{{translate "signup.instructions"}}</p>
+        {{{control form.email}}}
+        {{{control form.password}}}
+        {{{control form.password2}}}
       </div>
       <footer class=modal-footer>
         <div class=row-fluid>
