Don't prefix WebKit animations with 'ui', #nfc.

--- a/client/application/assets/styles/default.less
+++ b/client/application/assets/styles/default.less
@@ -2,13 +2,13 @@ body, p, label, input, button, select, textarea, .navbar-search {
   font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-@-webkit-keyframes uiDelayedFadeIn {
+@-webkit-keyframes delayedFadeIn {
   0%   { opacity: 0.5; }
   50%  { opacity: 0.5; }
   100% { opacity: 1; }
 }
 
-@-webkit-keyframes uiSpin {
+@-webkit-keyframes spin {
   0%   { -webkit-transform: rotate(0deg); }
   100% { -webkit-transform: rotate(360deg); }
 }
@@ -22,7 +22,7 @@ body, p, label, input, button, select, textarea, .navbar-search {
   z-index: 9999;
   background-color: rgba(0, 0, 0, 0.5);
   cursor: wait;
-  -webkit-animation-name: uiDelayedFadeIn;
+  -webkit-animation-name: delayedFadeIn;
   -webkit-animation-duration: 2s;
   -webkit-animation-iteration-count: 1;
   -webkit-animation-timing-function: linear;
@@ -38,7 +38,7 @@ body, p, label, input, button, select, textarea, .navbar-search {
     margin-top: (@height / 2) * -1;
     margin-left: (@width / 2) * -1;
     background: url('application/assets/images/loading.svg') no-repeat 0 0;
-    -webkit-animation-name: uiSpin;
+    -webkit-animation-name: spin;
     -webkit-animation-duration: 1s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
