--- a/client/application/assets/styles/default.less
+++ b/client/application/assets/styles/default.less
@@ -13,6 +13,17 @@ body, p, label, input, button, select, textarea, .navbar-search {
   100% { -webkit-transform: rotate(360deg); }
 }
 
+@-moz-keyframes delayedFadeIn {
+  0%   { opacity: 0.5; }
+  50%  { opacity: 0.5; }
+  100% { opacity: 1; }
+}
+
+@-moz-keyframes spin {
+  0%   { -moz-transform: rotate(0deg); }
+  100% { -moz-transform: rotate(360deg); }
+}
+
 #loading {
   position: fixed;
   top: 0;
@@ -26,6 +37,10 @@ body, p, label, input, button, select, textarea, .navbar-search {
   -webkit-animation-duration: 2s;
   -webkit-animation-iteration-count: 1;
   -webkit-animation-timing-function: linear;
+  -moz-animation-name: delayedFadeIn;
+  -moz-animation-duration: 2s;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: linear;
 
   .indicator {
     @width: 64px;
@@ -42,6 +57,10 @@ body, p, label, input, button, select, textarea, .navbar-search {
     -webkit-animation-duration: 1s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin;
+    -moz-animation-duration: 1s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
   }
 }
 
