Add failure message on Sign Up screen if the server request fails.
This assumes the server will reply with text/plain.

--- a/client/application/assets/styles/default.less
+++ b/client/application/assets/styles/default.less
@@ -83,3 +83,5 @@ body, p, label, input, button, select, textarea, .navbar-search {
 
   .pull-left { float: left; }
 }
+
+.pre { white-space: pre; }
