Send the log in request to the server.
Using the code from our Sign Up controller and the new Model.sync function,
send the log in request to the server. The password is updated to not be in
plain text (not implemented yet).

--- a/client/application/templates/login/index.hbs
+++ b/client/application/templates/login/index.hbs
@@ -6,6 +6,12 @@
       </header>
       <div class=modal-body>
         <p>{{translate "login.instructions"}}</p>
+        {{#if failure}}
+          <div class="alert alert-error">
+            <a class=close data-dismiss=alert>&times;</a>
+            <span class=pre>{{failure}}</span>
+          </div>
+        {{/if}}
         {{{control form.email}}}
         {{{control form.password}}}
       </div>
